# TGoL

./: README.md
lib/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Interface.cpp  Interface.h  Node.cpp  Node.h  Source.cpp  TGoLConfig.h  TGoLConfig.h.in  build.ninja  cmake_install.cmake  makefile
